# solveblog

./: .gitignore  CHANGELOG.md  README.md  custom.css  pyproject.toml  solveblog_settings.py
nbs/: 00_core.ipynb  01_app.ipynb  index.ipynb  nbdev.yml
public/pages/: 1_about.ipynb
public/posts/: hello-world.ipynb
solveblog/: __init__.py  _modidx.py  app.py  core.py
