[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "solveblog"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Rens", email = "rd@answer.ai"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "python-fasthtml",
    "fastcore",
    "monsterui",
    "mistletoe",
    "fastlite",
]

[project.urls]
Repository = "https://github.com/AnswerDotAI/solveblog"
Documentation = "https://AnswerDotAI.github.io/solveblog/"

[project.scripts]
solveblog-new = "solveblog.core:solveblog_new"
solveblog = "solveblog.core:solveblog_run"

[project.entry-points.nbdev]
solveblog = "solveblog._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "solveblog.__version__"}

[tool.setuptools.packages.find]
include = ["solveblog", "solveblog.*"]

[tool.setuptools.package-data]
solveblog = ["data/**/*"]

[tool.nbdev]
